# tft_parse

./: MANIFEST.in  README.md  setup.cfg
.github/workflows/: unittest.yml
tests/: test_champion.py  test_item.py  test_misc.py  test_tft_api.py
tests/data/: champion.json  item.json
tests/data/tft_api/: REAMD.md  info.json  match.json  metadata.json  participant.json  trait.json  unit.json  unit_chosen.json
tft_parse/: __init__.py  champion.py  data_class.py  item.py  misc.py  tft_api_class.py  trait.py
tft_parse/data/4.5/: champions.json
