[metadata]
name = tft_parse
version = attr: tft_parse.__version__
description = TFT tft_parse
long_description = file: README.md
keywords = Teamfight Tactics
license = BSD 3-Clause License
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9]

[options]
package_dir=
    =tft_parse


[options.package_data]
* = *.json